--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONCASA</title>
     
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
@@ -51,9 +53,9 @@
         <section id="upcycling" class="vh-100">
             upcycling</section>
         <section id="premium" class="vh-100">
-            <div class="premium_content d-flex flex-column">
-                <h3>“시간이 흘러도 변치 않는 가치”</h3>
-                <h3>프리미엄 가구 기획전 특별 혜택</h3>
+            <div class="premium_content d-flex flex-column jcb">
+                <h3>“시간이 흘러도 변치 않는 가치”<br>
+                프리미엄 가구 기획전 특별 혜택</h3>
                 <p>지금 구매하시면 다양한 혜택이 함께합니다!</p>
                 <div class="premium_tags">
                     <span class="tag">건강쿠션 증정</span>
