--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
     <header id="hd">
         <div class="container_fluid d-flex jcb aic">
             <h1><a href=""><img src="img/logo_w.svg" alt="" class="logo"></a></h1>
-            <nav>
-                <ul class="gnb d-flex">
-                    <li class="gnb_li"><a href="#minimal" class="gnb_li_a d-block">미니멀</a></li>
-                    <li class="gnb_li"><a href="#upcycling" class="gnb_li_a d-block">친환경</a></li>
-                    <li class="gnb_li"><a href="#premium" class="gnb_li_a d-block">프리미엄</a></li>
-                    <li class="gnb_li"><a href="#taste" class="gnb_li_a d-block">취향찾기</a></li>
-                    <li class="gnb_li"><a href="#review" class="gnb_li_a d-block">리뷰</a></li>
-                    <li class="gnb_li"><a href="#moncasa" class="gnb_li_a_bold d-block">MONCASA</a></li>
-                </ul>
-            </nav>
-        </div>
+            <div class="gnb_container d-flex aic jcb">
+                <nav>
+                    <ul class="gnb d-flex">
+                        <li class="gnb_li"><a href="#minimal" class="gnb_li_a d-block">미니멀</a></li>
+                        <li class="gnb_li"><a href="#upcycling" class="gnb_li_a d-block">친환경</a></li>
+                        <li class="gnb_li"><a href="#premium" class="gnb_li_a d-block">프리미엄</a></li>
+                        <li class="gnb_li"><a href="#taste" class="gnb_li_a d-block">취향찾기</a></li>
+                        <li class="gnb_li"><a href="#review" class="gnb_li_a d-block">리뷰</a></li>
+                        <li class="gnb_li"><a href="#moncasa" class="gnb_li_a_bold d-block">MONCASA</a></li>
+                    </ul>
+                </nav>
+                <button class="global_bt d-flex aic jcb">
+                    <img src="img/global_bt.svg" alt="">KOR</button>
+            </div>
     </header>
     <main>
         <section id="main_scalebanner">
