페이지 이동 적용

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
     <main>
         <section id="main_scalebanner">
             <div class="scalebanner d-flex w-100">
-                <div class="scalechild1 d-flex col-4 flex-column jcb">
+                <a href="#minimal" class="scalechild1 d-flex col-4 flex-column jcb">
                     <h2 class="order-3 mt-auto">Minimal</h2>
                     <h3>가을 감성,<br />우리 사이 만큼</h3>
                     <p>1인가구,신혼부부를<br />위한 작지만 깊은 가을 감성</p>
-                </div>
-                <div class="scalechild2 d-flex col-4 flex-column jcb">
+                </a>
+                <a href="#upcycling" class="scalechild2 d-flex col-4 flex-column jcb">
                     <h2 class="mb-auto">Upcycling</h2>
                     <h3>숨겨진 보석을 찾아라</h3>
                     <p>지구를 살리는<br />가장 아름다운 선택</p>
-                </div>
-                <div class="scalechild3 d-flex col-4 flex-column jcb">
+                </a>
+                <a href="#premium" class="scalechild3 d-flex col-4 flex-column jcb">
                     <h2 class="mb-auto">Premium</h2>
                     <h3>“시간이 흘러도 변치<br />않는 가치”</h3>
                     <p>인생 후반전, 나를 위한 품격 있는<br />공간을 만들어보세요</p>
-                </div>
+                </a>
             </div>
         </section>
         <section id="minimal" class="vh-100">
