--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             minimal</section>
         <section id="upcycling" class="vh-100">
             upcycling</section>
-        <section id="premium" class="vh-100">
+        <section id="premium">
             <div class="premium_content d-flex flex-column jcb">
                 <h3>“시간이 흘러도 변치 않는 가치”<br>
                 프리미엄 가구 기획전 특별 혜택</h3>
@@ -65,6 +65,47 @@
                     <span class="tag">무료 설치 홈서비스</span>
                     <span class="tag">지인 추천시, 최대 50% 할인 혜택</span>
                 </div>
+            </div>
+            <div class="premium_prod d-flex jcb">
+                <ul class="product">
+                    <li class="img">
+                        <img src="img/premium_product1.png" alt="">
+                    </li>
+                    <li class="text d-flex jcb">
+                        <h3 class="prod_name">디오 3300 코너형</h3>
+                        <p class="prod_cost">8,300,000원</p>
+                        <p class="prod_price">6,640,000원</p>
+                    </li>
+                </ul>
+                <ul class="product">
+                    <li class="img">
+                        <img src="img/premium_product2.png" alt=""></li>
+                    <li class="text d-flex jcb">
+                        <h3 class="prod_name">디오 3300 코너형</h3>
+                        <p class="prod_cost">8,300,000원</p>
+                        <p class="prod_price">6,640,000원</p>
+                    </li>
+                </ul>
+                <ul class="product">
+                    <li class="img">
+                        <img src="img/premium_product3.png" alt="">
+                    </li>
+                    <li class="text d-flex jcb">
+                        <h3 class="prod_name">디오 3300 코너형</h3>
+                        <p class="prod_cost">8,300,000원</p>
+                        <p class="prod_price">6,640,000원</p>
+                    </li>
+                </ul>
+                <ul class="product">
+                    <li class="img">
+                        <img src="img/premium_product4.png" alt="">
+                    </li>
+                    <li class="text d-flex jcb">
+                        <h3 class="prod_name">디오 3300 코너형</h3>
+                        <p class="prod_cost">8,300,000원</p>
+                        <p class="prod_price">6,640,000원</p>
+                    </li>
+                </ul>
             </div>
         </section>
         <section id="taste" class="vh-100">
