상품 배지 적용

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             minimal</section>
         <section id="upcycling" class="vh-100">
             upcycling</section>
-        <section id="premium">
+        <section id="premium" class="vh-100">
             <div class="premium_content d-flex flex-column jcb">
                 <h3>“시간이 흘러도 변치 않는 가치”<br>
                 프리미엄 가구 기획전 특별 혜택</h3>
@@ -70,25 +70,38 @@
                 <ul class="product">
                     <li class="img">
                         <img src="img/premium_product1.png" alt="">
+                            <div class="icon">
+                                <!-- <span class="icon eco">ECO</span> -->
+                                <span class="icon sale">20%</span>
+                            </div>
                     </li>
                     <li class="text d-flex jcb">
-                        <h3 class="prod_name">디오 3300 코너형</h3>
-                        <p class="prod_cost">8,300,000원</p>
-                        <p class="prod_price">6,640,000원</p>
+                        <h3 class="prod_name">오르덴 2700 리클라이너</h3>
+                        <p class="prod_cost">4,690,000원</p>
+                        <p class="prod_price">3,752,000원</p>
                     </li>
                 </ul>
                 <ul class="product">
                     <li class="img">
-                        <img src="img/premium_product2.png" alt=""></li>
+                        <img src="img/premium_product2.png" alt="">
+                            <div class="icon">
+                                <span class="icon eco">ECO</span>
+                                <span class="icon sale">20%</span>
+                            </div>
+                    </li>
                     <li class="text d-flex jcb">
-                        <h3 class="prod_name">디오 3300 코너형</h3>
-                        <p class="prod_cost">8,300,000원</p>
-                        <p class="prod_price">6,640,000원</p>
+                        <h3 class="prod_name">디에즈 4220 모듈형</h3>
+                        <p class="prod_cost">10,600,000원</p>
+                        <p class="prod_price">8,480,000원</p>
                     </li>
                 </ul>
                 <ul class="product">
                     <li class="img">
                         <img src="img/premium_product3.png" alt="">
+                            <div class="icon">
+                                <!-- <span class="icon eco">ECO</span> -->
+                                <span class="icon sale">20%</span>
+                            </div>
                     </li>
                     <li class="text d-flex jcb">
                         <h3 class="prod_name">디오 3300 코너형</h3>
@@ -99,11 +112,14 @@
                 <ul class="product">
                     <li class="img">
                         <img src="img/premium_product4.png" alt="">
-                    </li>
+                            <div class="icon">
+                                <!-- <span class="icon eco">ECO</span> -->
+                                <span class="icon sale">20%</span>
+                            </div>
                     <li class="text d-flex jcb">
-                        <h3 class="prod_name">디오 3300 코너형</h3>
-                        <p class="prod_cost">8,300,000원</p>
-                        <p class="prod_price">6,640,000원</p>
+                        <h3 class="prod_name">도블레 3040 카우치형</h3>
+                        <p class="prod_cost">6,200,000원</p>
+                        <p class="prod_price">4,960,000원</p>
                     </li>
                 </ul>
             </div>
