--- a/index.html
+++ b/index.html
@@ -131,5 +131,27 @@
         <section id="moncasa" class="vh-100">
             moncasa</section>
     </main>
+    <footer id="ft d-flex">
+        <div class="container_ft d-flex jcb aic">
+            <h1><img src="img/logo_w.svg" alt=""></h1>
+            <ul class="list_ft d-flex jcb aic">
+                <li class="ft_text">
+                    <h4>고객센터 1588-0000</h4>
+                    <p>평일 09:00 ~ 17:30 (주말 및 공휴일 휴무)</p>
+                    <p>점심 12:00 ~ 13:00</p>
+                </li>
+                <li class="ft_text">
+                    <h4>브랜드소개</h4>
+                    <p>이용약관</p>
+                    <p>이용안내</p>
+                    <p>개인정보처리방침</p>
+                </li>
+                <li class="ft_text">
+                    <p>(주)MONCASA | 대표 : 아무개 | 서울 구로구 새말로 97 | 사업자등록번호 : 123-45-67980 사업자정보확인</p>
+                    <p>통신판매업신고번호 : 2025-그린아트-0725 | 이메일 : moncasa@gmail.com</p>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
